--- a/style.css
+++ b/style.css
@@ -1109,9 +1109,6 @@ body {
   .navbar-top {
     gap: 2rem;
   }
-  .navbar-container {
-    gap: 9rem;
-  }
 }
 
 @media only screen and (max-width: 1366px) {
@@ -1124,141 +1121,9 @@ body {
   .navbar-top {
     gap: 2rem;
   }
-  .navbar-container {
-    gap: 9rem;
-  }
-  /* .search-bar {
-    width: 40rem;
-  }
-  .navbar-top {
-    gap: 0;
-  }
-  .navbar-container {
-    width: 73.6rem;
-  }
-  .user-actions {
-    gap: 3.6rem;
-  }
-  .facility-section {
-    height: 10.7rem;
-    padding: 0rem 15rem;
-    gap: 0;
-  }
-
-  .collection {
-    padding: 8.6rem 10.5rem;
-    gap: 8rem;
-  } */
-
-  /* .collection-img img:first-child {
-    width: 100%;
-  }
-  .collection-img img:last-child {
-    width: 100%;
-    height: 87%;
-  } */
 }
 
 @media only screen and (max-width: 1200px) {
-  /* .navbar-container {
-    gap: 2rem;
-  }
-  .navbar-top {
-    gap: 5rem;
-  }
-  .search-bar {
-    width: 33rem;
-  }
-  .user-actions {
-    gap: 0.6rem;
-  }
-  .navbar-bottom {
-    gap: 2rem;
-  }
-  .image {
-    width: 78.8rem;
-    height: 50.4rem;
-  }
-  .facility-section {
-    padding: 0rem 12rem;
-  }
-  .facility-item {
-    width: 24.9rem;
-  }
-
-  .box .box-label {
-    font-size: 1.8rem;
-    font-weight: 400;
-    line-height: 2.88rem;
-  }
-
-  .box .box-address {
-    font-size: 1.4rem;
-    font-weight: 300;
-    line-height: 2.16rem;
-  }
-
-  .header-part .header-info {
-    font-size: 3.8rem;
-    font-weight: 500;
-    line-height: 5rem;
-  }
-  .header-part .header-description {
-    font-size: 2rem;
-    font-weight: 400;
-    line-height: 1.88rem;
-  }
-
-  .collection-img img:first-child {
-    width: 100%;
-    height: 79%;
-  }
-  .collection-img img:last-child {
-    width: 100%;
-    height: 79%;
-  }
-
-  .header-content p:nth-of-type(1) {
-    font-size: 3.8rem;
-    font-weight: 500;
-    line-height: 5rem;
-  }
-
-  .header-content p:nth-of-type(2) {
-    font-size: 2rem;
-    font-weight: 400;
-    line-height: 1.88rem;
-  }
-  .whishlist img {
-    width: 85%;
-  }
-  .container-description {
-    width: 25rem;
-  }
-  .whishlist .love-img {
-    top: 1.8rem;
-    left: 18rem;
-  }
-
-  .whishlist .rating {
-    top: 22rem;
-    left: 1.6rem;
-  }
-
-  .popular-categories-section .heading p:nth-of-type(1) {
-    font-size: 3.8rem;
-    font-weight: 500;
-    line-height: 5rem;
-  }
-
-  .popular-categories-section .heading p:nth-of-type(2) {
-    font-size: 2rem;
-    font-weight: 400;
-    line-height: 1.88rem;
-  }
-  .container-head {
-    left: 32rem;
-  } */
   html {
     font-size: 54%;
   }
@@ -1268,58 +1133,8 @@ body {
   .navbar-top {
     gap: 2rem;
   }
-  .navbar-container {
-    gap: 9rem;
-  }
 }
 @media only screen and (max-width: 1024px) {
-  /* .navbar-container {
-    gap: 0rem;
-  }
-  .navbar-top {
-    gap: 2rem;
-  }
-  .search-bar {
-    width: 25rem;
-  }
-  .user-actions {
-    gap: 0.4rem;
-  }
-  .navbar-bottom {
-    gap: 1rem;
-  }
-  .brand-name {
-    font-size: 2.8rem;
-  }
-  .login-text {
-    font-size: 1.4rem;
-  } */
-  /* -------------- */
-  /* .search-input {
-    width: 90%;
-  }
-
-  .login-icon {
-    width: 2rem;
-    height: 2rem;
-  }
-
-  .action-icons img {
-    width: 3rem;
-    height: 3rem;
-  }
-
-  .menu {
-    width: 76rem;
-  }
-
-  .menu-list {
-    gap: 2.8rem;
-  }
-
-  .menu-list li a {
-    font-size: 1.4rem;
-  } */
   html {
     font-size: 45%;
   }
@@ -1329,9 +1144,6 @@ body {
   .navbar-top {
     gap: 2rem;
   }
-  .navbar-container {
-    gap: 9rem;
-  }
 }
 @media only screen and (max-width: 969px) {
   html {
@@ -1340,12 +1152,49 @@ body {
   .t-container img {
     width: 67%;
   }
-
   .navbar-top {
     gap: 2rem;
   }
-  .navbar-container {
-    gap: 9rem;
+}
+@media only screen and (max-width: 820px) {
+  html {
+    font-size: 40%;
+  }
+  .search-bar {
+    width: 35.9rem;
+  }
+  .t-container img {
+    width: 64%;
+  }
+  .categories {
+    padding: 0.2rem 1.6rem;
+  }
+  .main-content-header {
+    margin-bottom: 25px;
+  }
+  .main-content-header p img {
+    width: 10%;
+  }
+  .image img {
+    width: 95%;
+  }
+  .facility-section {
+    padding: 0 10rem;
+  }
+  .facility-item img {
+    width: 50%;
+  }
+  .whishlist .love-img {
+    left: 22rem;
+  }
+  .container-description {
+    width: 24.3rem;
+  }
+  .whishlist .rating {
+    top: 26rem;
+  }
+  .container-head {
+    left: 41rem;
   }
 }
 
@@ -1359,9 +1208,7 @@ body {
   .navbar-top {
     gap: 2rem;
   }
-  .navbar-container {
-    gap: 9rem;
-  }
+
   .categories {
     padding: 0.2rem 1.6rem;
   }
@@ -1385,7 +1232,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 430px) {
   html {
     font-size: 20%;
   }
